Fix-Feat: Fixed height of teams card's | add bg-image to clients, add pixel perfect for desktop (both sections), (not responsive for mobile, no perfect for mobile)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1987,7 +1987,7 @@ label.valid-valid {
   justify-content: space-around;
 }
 .team__container {
-  margin-bottom: 88px;
+  margin-bottom: 99px;
 }
 .team__heading {
   color: #ffffff;
@@ -2060,7 +2060,7 @@ label.valid-valid {
 }
 .team__footer {
   position: relative;
-  margin-top: 55px;
+  margin-top: 54px;
   text-align: center;
 }
 .team__footer-text {
@@ -2071,14 +2071,11 @@ label.valid-valid {
   margin-bottom: 0.63rem;
 }
 
-.clients {
-  padding-bottom: 355px;
-}
 .clients__heading {
-  margin-bottom: 35px;
+  margin-bottom: 46px;
 }
 .clients__heading-wrap-img {
-  margin-bottom: 25px;
+  margin-bottom: 17px;
 }
 .clients__heading-img {
   width: 33px;
@@ -2092,10 +2089,10 @@ label.valid-valid {
   box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
   padding-top: 24px;
   padding-left: 20px;
-  padding-bottom: 60px;
+  padding-bottom: 68px;
 }
 .clients__card-heading {
-  margin-bottom: 30px;
+  margin-bottom: 12px;
 }
 .clients__card-face {
   display: inline-block;
@@ -2107,12 +2104,13 @@ label.valid-valid {
 }
 .clients__card-name {
   display: inline-block;
-  margin-left: 23px;
+  margin-left: 21px;
   font-family: "Yeseva One";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   vertical-align: middle;
+  line-height: 23px;
 }
 .clients__card-text {
   max-width: 325px;
@@ -2120,7 +2118,7 @@ label.valid-valid {
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
-  line-height: 27px;
+  line-height: 27.5px;
   color: #959595;
 }
 .clients__card-tag {
@@ -2140,7 +2138,10 @@ label.valid-valid {
   line-height: 25px;
   text-align: center;
   text-transform: uppercase;
-  padding: 10px 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 18px;
+  padding-right: 13px;
 }
 .clients__card-tag-a {
   margin-right: -2.5px;
@@ -2152,13 +2153,28 @@ label.valid-valid {
   width: 1px;
   background-color: #ffffff;
 }
+.clients__card-tag-b {
+  text-transform: unset;
+  padding-right: 25px;
+}
 .clients__card-tag-icon {
   width: 32px;
   vertical-align: middle;
+  margin-right: 11px;
 }
 .clients__card-tag-title {
   display: inline-block;
   vertical-align: middle;
+}
+.clients__footer {
+  margin-bottom: -5px;
+}
+.clients__bg-left img, .clients__bg-right img {
+  opacity: 0.1;
+  width: 100%;
+}
+.clients__bg-left, .clients__bg-right {
+  width: 50%;
 }
 
 .footer .footer--bg {
