--- a/src/sass/tamplates/_team.scss
+++ b/src/sass/tamplates/_team.scss
@@ -7,7 +7,7 @@
     justify-content: space-around;
   }
   &__container {
-    margin-bottom: 88px;
+    margin-bottom: 99px;
   }
 
   &__heading {
@@ -87,7 +87,7 @@
   }
   &__footer {
     position: relative;
-    margin-top: 55px;
+    margin-top: 54px;
     text-align: center;
     &-text {
       display: inline-block;
